<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".NewTask">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTaskName"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/card_background"
        android:gravity="center"
        android:hint="@string/task_name"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/title_card_name"
        android:textColorHint="@color/title_card_name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectDateTime"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/card_background"
        android:hint="@string/date_and_time"
        android:textAllCaps="false"
        android:textColor="@color/title_card_name"
        android:textColorHint="@color/title_card_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTaskName" />

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/card_background"
        android:hint="@string/location"
        android:textColor="@color/title_card_name"
        android:textColorHint="@color/title_card_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectDateTime" />

    <Spinner
        android:id="@+id/spnOptions"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/card_background"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLocation" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/corner_radius"
        android:backgroundTint="@color/card_background"
        android:hint="@string/addTask"
        android:textColor="@color/title_card_name"
        android:textColorHint="@color/title_card_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/color_background"
        android:src="@drawable/ic_home"
        app:borderWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>